--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,8 @@
 {
   "name": "Educatrivia",
+  "scope": "/views/",
+  "start_url": "/views/",
+  "display": "standalone",
   "icons": [
     {
       "src": "static/icons/rocket512.png",
@@ -11,7 +14,5 @@
       "type": "image/png",
       "sizes": "128x128"
     }
-  ],
-  "start_url": "http://localhost:5500/views/index.html",
-  "display": "standalone"
+  ]
 }
