actualizacion de enrutamiento a la carpeta views

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,6 @@
 {
   "name": "Educatrivia",
-  "scope": "/views/",
-  "start_url": "/views/",
+  "start_url": "index.html",
   "display": "standalone",
   "icons": [
     {
